# experimental

./: .clang-format  .gitignore  1.rs  mach_o_function_extractor.c  rushba_graph_exp.py  rushba_graph_steps.cpp  rushba_graph_steps.py  wb_parser_habr.py
cpp/: cas128.cpp  merge_sorted_lists.cpp  ranges_exp.cpp  trigrams.cpp
cpp/first_k_elts_from_a_list_of_sorted_lists/: first_k_elts_from_a_list_of_sorted_lists.cpp
cpp/graphs/: graph.h  iterative_dfs.cpp
cpp/lc128_longest_consecutive_sequence/: .clangd  .gitignore  CMakeLists.txt  lc128_longest_consecutive_sequence.cpp
cpp/lc238_product_of_array_except_self/: lc238_product_of_array_except_self.cpp
cpp/lc2_add_two_numbers/: lc2_add_two_numbers.cpp
cpp/lc380_insert_delete_getrandom_o1/: lc380_insert_delete_getrandom_o1.cpp
cpp/lc3843_elt_with_min_frequency/: lc3843_elt_with_min_frequency.cpp  main.cpp
cpp/lc48_rotate_image/: lc48_rotate_image.cpp
cpp/lc8_atoi/: lc8_atoi.cpp
cpp/lc_129_sum_root_to_leaf_numbers/: lc_129_sum_root_to_leaf_numbers.cpp
cpp/lc_295_median_from_a_data_stream/: lc_295_median_from_a_data_stream.cpp
cpp/lc_528_random_pick_with_weight/: lc_528_random_pick_with_weight.cpp
cpp/mutithreading/: concurrent_bounded_queue.cpp  concurrent_bounded_queue.hpp  lru_cache.cpp  parallel_file_line_counter.cpp
cpp/neetcode_task_scheduler/: neetcode_task_scheduler.cpp
go/: concurrent_file_reader.go  throttle.go
go/heap/: go.mod  heap.go  merge_lists.go  merge_test.go
go/leetcode/: go.mod  go.sum
lc78_subsets/: cpp_subsets.cpp  py_subsets.py
py/: brackets.py  google_binary_search.py  google_knight_dialer.py  habr_article550088_yandex_tasks.py  trigrams_exp.py  verbose_call.py
py/chatgpt_1_rate_limited_task_queue/: chatgpt_1_rate_limited_task_queue.py
py/chatgpt_2_fix_multithreaded_counter/: chatgpt_2_fix_multithreaded_counter.py
py/chatgpt_3_script_reusable_library/: pyproject.toml  task_description.py
py/chatgpt_3_script_reusable_library/src/json_requests/: cli.py  fetch.py
py/chatgpt_3_script_reusable_library/tests/: test_fetch.py
py/chatgpt_4_validate_json/: chatgpt_4_validate_json.py
py/chatgpt_5_tcp_echo_server/: chatgpt_5_tcp_echo_server.py
py/chatgpt_6_identify_bugs_in_code/: chatgpt_6_identify_bugs_in_code.py
py/fb_fortune/: 1.txt  1_txt.fortune_cache  4_2bsd-fortunes.fortune_cache  fb_fortune.py  fortunes.txt
py/lc11_container_with_most_water/: lc11_container_with_most_water.py
py/lc121_best_time_to_buy_and_sell_stock/: lc121_best_time_to_buy_and_sell_stock.py
py/lc122_best_time_to_buy_and_sell_stock_2/: lc122_best_time_to_buy_and_sell_stock_2.py
py/lc133_clone_graph/: lc133_clone_graph.py
py/lc134_gas_station/: lc134_gas_station.py
py/lc141_linked_list_cycle/: lc141_linked_list_cycle.py
py/lc151_reverse_words_in_a_string/: lc151_reverse_words_in_a_string.py
py/lc152_max_product_subarray/: lc152_max_product_subarray.py
py/lc167_two_sum_II_input_array_is_sorted/: lc167_two_sum_II_input_array_is_sorted.py
py/lc169_majority_element/: lc169_majority_element.py
py/lc173_binary_search_tree_iterator/: lc173_binary_search_tree_iterator.py
py/lc189_rotate_array/: lc189_rotate_array.py
py/lc1_two_sum/: lc1_two_sum.py
py/lc200_number_of_islands/: lc200_number_of_islands.py
py/lc209_min_size_subarray_sum/: lc209_min_size_subarray_sum.py
py/lc215_kth_largest_element/: lc215_kth_largest_element.py
py/lc250_kth_smallest_in_bst/: lc250_kth_smallest_in_bst.cpp  lc250_kth_smallest_in_bst.py
py/lc274_h_index/: lc274_h_index.py
py/lc373_top_k_pairs_with_smallest_sum/: lc373_top_k_pairs_with_smallest_sum.py
(+71 files in other folders)
